Move hardcoded strings to resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,255 @@
 <resources>
     <string name="app_name">Мама не вдома</string>
     <string name="default_notification_channel_id" translatable="false">mama_ne_vdoma_notifications</string>
+    <string name="fcm_message_join">Вам надійшов запит на приєднання до групи</string>
+    <string name="fcm_message_kick">Адміністратор виключив Вас з групи</string>
+    <string name="fcm_message_make_admin">Адміністратор передав Вам права керування групою</string>
+    <string name="fcm_message_reject">Адміністратор відхилив Ваш запит на приєднання до групи</string>
+    <string name="fcm_message_accept">Адміністратор схвалив Ваш запит на приєднання до групи</string>
+    <string name="title_create_user_profile">Створити профіль</string>
+    <string name="title_restore_password">Відновлення паролю</string>
+    <string name="title_groups">Групи</string>
+    <string name="title_edit_group">Редагування групи</string>
+    <string name="title_edit_group_avatar">Редагування зображення групи</string>
+    <string name="title_review_user">Надати відгук</string>
+    <string name="title_reviews">Відгуки</string>
+    <string name="title_main_page">Головна</string>
+    <string name="title_notifications">Сповіщення</string>
+    <string name="title_search">Пошук</string>
+    <string name="title_user_profile">Мій акаунт</string>
+    <string name="title_edit_user_profile">Редагування акаунту</string>
+    <string name="title_verify_user_data">Веріфікація нових даних</string>
+    <string name="title_add_child_data">Розкажіть про свою дитину</string>
+    <string name="title_add_child_schedule">Вкажіть, коли потрібно доглядати дитину</string>
+    <string name="title_change_credentials">Змініть свої дані для авторизації</string>
+    <string name="title_new_password_confirm">Падтвердження зміни пароля</string>
+    <string name="join_request">Запит на приєднання</string>
+    <string name="title_settings">Налаштування</string>
+    <string name="action_refuse">Відхилити</string>
+    <string name="action_approve">Погодити</string>
+    <string name="approve_request">Погодити запит</string>
+    <string name="refuse_request">Відхилити запит</string>
+    <string name="join_request_info">Запит на приєднання до групи \"%s\"</string>
+    <string name="format_age">%s р.</string>
+    <string name="child_care_days">Дні, коли потрібно доглянути дитину</string>
+    <string name="child_care_hours">Час, коли потрібно доглянути дитину</string>
+    <string name="you_are_admin">Ви адміністратор групи</string>
+    <string name="format_group_id">ID: %s</string>
+    <string name="child_care_days_set">Дні нагляду за дітьми</string>
+    <string name="child_care_hours_set">Час нагляду за дітьми</string>
+    <string name="edit_group">Редагувати групу</string>
+    <string name="make_admin">Передати права адміністратора</string>
+    <string name="delete_group">Видалити групу</string>
+    <string name="leave_group">Покинути групу</string>
+    <string name="join_group">Приєднатись до групи</string>
+    <string name="join_request_sent">Запит до групи \"%s\" успішно відправлений. Ми повідомимо вас, коли адміністратор групи затвердить ваш запит</string>
+    <string name="cancel_join_request">Скасувати запит</string>
+    <string name="is_a_member_of">Входить у склад таких груп:</string>
+    <string name="format_group_id_2">ID групи:\n%s</string>
+    <string name="your_address">Ваша адреса</string>
+    <string name="morning">ранок</string>
+    <string name="evening">вечір</string>
+    <string name="noon">обід</string>
+    <string name="child_name">Ім\'я дитини</string>
+    <string name="incorrect_child_name">Ви ввели некоректнe ім\'я</string>
+    <string name="child_age">Вік дитини</string>
+    <string name="incorrect_child_age">Ви ввели некоректний вік</string>
+    <string name="register_child">Зареєструвати дитину</string>
+    <string name="enter_your_phone_number">Введіть свій номер телефону</string>
+    <string name="phone_number">Номер телефону</string>
+    <string name="incorrect_phone_number">Ви ввели некоректний номер</string>
+    <string name="choose_country_phone_code">Виберіть код</string>
+    <string name="enter_country_name">Введіть назву країни</string>
+    <string name="user_privacy_agreement">Даю згоду на обробку моїх персональних даних, а також ознайомлена та погоджуюсь із:</string>
+    <string name="privacy_policy">Політикою конфіденційності</string>
+    <string name="list_tab">"-   "</string>
+    <string name="user_agreement">Умовами використання мобільного застосунку \"Мама-не-вдома\"</string>
+    <string name="responsibility_refusal">Відмовою від відповідальності</string>
+    <string name="whole_day">Цілий день</string>
+    <string name="note_hint">Введіть будь-які відомості, які Ви вважаєте важливими/корисними для інших користувачів</string>
+    <string name="note_error">Нотатка не повинна бути довше 1000 символів</string>
+    <string name="note_text_length">до 1000 символів</string>
+    <string name="action_next">Далі</string>
+    <string name="continue_with_google">Продовжити з Google</string>
+    <string name="verify_email_info">Ми відправили на вашу пошту електронний лист з кодом із 4 символів. Перевірте пошту, і якщо не знайдете листа — теку \"спам\"</string>
+    <string name="send_code_again">Надіслати код ще раз</string>
+    <string name="wrong_otp">Ви ввели невірний код</string>
+    <string name="got_it">Зрозуміло</string>
+    <string name="no">Ні</string>
+    <string name="choose_image">Обрати фото</string>
+    <string name="choose_source">Оберіть спосіб завантаження файлу</string>
+    <string name="choose_camera">Камера</string>
+    <string name="choose_gallery">Галерея</string>
+    <string name="make_admin_info">Ви впевнені, що хочете передати адміністративні права в групі \\\"%s\\\"?</string>
+    <string name="action_yes_i_do">Так, я хочу</string>
+    <string name="action_make_admin">Передати права</string>
+    <string name="attention_need_permission">Увага! Потрібен дозвіл</string>
+    <string name="action_allow">Дозволити</string>
+    <string name="action_allow_in_settings">Дозволити в налаштуваннях</string>
+    <string name="permission_location_declined">Схоже, ви назавжди відхилили дозвіл на місцезнаходження. Ви можете перейти в налаштування додатку, щоб надати його</string>
+    <string name="permission_location_info">Цій програмі потрібен доступ до вашого місцезнаходження, щоб працювати повноцінно</string>
+    <string name="permission_camera_declined">Схоже, ви назавжди відхилили дозвіл на використання камери. Ви можете перейти в налаштування додатку, щоб надати його</string>
+    <string name="permission_camera_info">Цій програмі потрібен доступ на використання камери, щоб працювати повноцінно</string>
+    <string name="permission_notification_declined">Схоже, ви назавжди відхилили дозвіл на відправлення/отримання повідомлень. Ви можете перейти в налаштування додатку, щоб надати його</string>
+    <string name="permission_notification_info">Цій програмі потрібен доступ на відправлення/отримання повідомлень, щоб працювати повноцінно</string>
+    <string name="action_go_to_main">На головну</string>
+    <string name="groups_not_found">На жаль, групи за даною локацією не знайдені. Ви можете бути першою і створити нову групу</string>
+    <string name="action_join">Приєднатися до групи</string>
+    <string name="action_create_group">Створити групу</string>
+    <string name="recommended_groups">Рекомендовані групи</string>
+    <string name="search_new_group">Пошук нової групи</string>
+    <string name="join_request_approved">Адміністратор схвалив Ваш запит на приєднання до групи \"%1$s\" (ID - %2$s).</string>
+    <string name="my_groups">Мої групи</string>
+    <string name="make_admin_request">Адміністратор передав Вам права керування групою \"%1$s\" (ID - %2$s).</string>
+    <string name="join_request_declined">Нажаль, Ваш запит на приєднання до групи \"%1$s\" (ID - %2$s) було відхилено адміністратором.</string>
+    <string name="admin_kicked">Адміністратор виключив Вас з групи \"%1$s\" (ID - %2$s).</string>
+    <string name="account_existed">"Вже є акаунт? "</string>
+    <string name="action_log_in">Увійти</string>
+    <string name="action_start">Почати</string>
+    <string name="action_search">Новий пошук</string>
+    <string name="user_not_found">Користувача з заданими параметрами не знайдено</string>
+    <string name="search_group_by_location">Шукати групу за локацією</string>
+    <string name="or">чи</string>
+    <string name="start_search">Розпочати пошук</string>
+    <string name="info_updated">Інформація успішно оновлена!</string>
+    <string name="action_save">Зберегти</string>
+    <string name="action_not_save">Не зберігати</string>
+    <string name="warning_not_saved">Ви залишаете цей екран. Всі незбережені зміни будуть втрачені</string>
+    <string name="action_delete_child">Так, видалити картку</string>
+    <string name="delete_child_info">Картка дитини та розклад по догляду за дитиною будуть видалені. Підтвердити видалення картки дитини?</string>
+    <string name="action_yes_delete_account">Так, видалити акаунт</string>
+    <string name="delete_account_info">Після видалення акаунту немає можливості його відновити. Щоб користуватись після цього мобільним додатком, необхідно буде зареєструватись заново. Підтвердити видалення свого акаунту?</string>
+    <string name="action_delete_account">Видалити акаунт</string>
+    <string name="action_save_changes">Зберегти зміни</string>
+    <string name="add_child_plus">+ Додати дитину</string>
+    <string name="children_info">Інформація о дітях</string>
+    <string name="my_schedule">Мій розклад</string>
+    <string name="address_not_checked">Адреса не перевірена</string>
+    <string name="address">Адреса</string>
+    <string name="enter_your_address">Введіть Вашу адресу</string>
+    <string name="choose_or_enter_location">Оберіть Ваше місцерозташування на карті або введіть назву у поле для пошуку</string>
+    <string name="current_location">поточне місцезнаходження</string>
+    <string name="you_are_here">Ви тут</string>
+    <string name="location">Місце розташування</string>
+    <string name="file_format">Формат файлу - jpg, jpeg, gif, tif, tiff, tga, bmp, png</string>
+    <string name="personal_info">Персональна інформація</string>
+    <string name="photo">Фото</string>
+    <string name="address_not_found">Вказано неіснуючу адресу</string>
+    <string name="address_not_checked_info">Ви не перевірили вказану адресу</string>
+    <string name="photo_size_error">Аватарка має розмір більше 1МБ. Будь ласка, оберіть інше фото і повторіть</string>
+    <string name="nickname">Ім\'я (нікнейм) користувача</string>
+    <string name="enter_your_name">Вкажіть своє ім\'я (нікнейм)</string>
+    <string name="name_nickname">Ім\'я (нікнейм)</string>
+    <string name="name">Ім\'я</string>
+    <string name="incorrect_name">Ви ввели некоректнe ім\'я (нікнейм)</string>
+    <string name="name_rule_hint">Ваше ім\'я (нікнейм) повинне складатись із 2–18 символів і може містити букви та цифри, а також пробіли та дефіси</string>
+    <string name="enter_group_name">Введіть назву групи</string>
+    <string name="group_name_hint">Назва групи повинна складатись від 6 до 18 символів, може містити латинські чи кириличні букви та цифри, пробіли, дефіси. НЕ є унікальною</string>
+    <string name="group_name">Назва групи</string>
+    <string name="group_name_incorrect">Ви ввели некоректну назву</string>
+    <string name="group_admin">Адміністратор групи</string>
+    <string name="age">Вік</string>
+    <string name="from">Вік</string>
+    <string name="to">До</string>
+    <string name="min_age_error">Не може бути менше 1 та більше за макс. вік</string>
+    <string name="max_age_error">Не може бути більше 18 та менше за мін. вік</string>
+    <string name="enter_group_schedule">Визначіть графік групи</string>
+    <string name="group_photo">Фото групи</string>
+    <string name="group_description">Опис групи</string>
+    <string name="group_description_hint">Введіть будь-які відомості, які Ви вважаєте важливими/корисними для інших користувачів</string>
+    <string name="action_create_new_group">Створити нову групу</string>
+    <string name="group_updated">Ваша група успішно змінена</string>
+    <string name="group_created">Ваша група успішно створена</string>
+    <string name="your_current_location">Ваше місцезнаходження</string>
+    <string name="your_current_location_hint">Будь ласка, оберіть ваше місцерозташування, щоб ви могли підібрати найближчі групи до вас</string>
+    <string name="note">Нотатка</string>
+    <string name="change_child_schedule">Внесіть зміни в розклад, коли потрібно доглядати дитину</string>
+    <string name="enter_name">Введіть ім’я</string>
+    <string name="action_close">Закрити</string>
+    <string name="change_your_schedule">Внесіть зміни до свого графіку, коли можете доглядати дітей</string>
+    <string name="questions_to_find_group">Щоб зробити це ми задамо вам декілька запитань. Це займе лише кілька хвилин.</string>
+    <string name="find_group_for_you">Давайте знайдемо для вас найкращу групу.</string>
+    <string name="hello_user">Вітаємо, %s!</string>
+    <string name="registration_successful">Реєстрація пройшла успішно</string>
+    <string name="add_more_children">Додати ще дитину</string>
+    <string name="title_child_info">Анкета дитини</string>
+    <string name="add_child">Додати дитину</string>
+    <string name="children">Діти:</string>
+    <string name="actiom_confirm">Підтвердити</string>
+    <string name="fill_your_profile">Натисніть тут, щоб заповнити Ваш профіль</string>
+    <string name="you">Ви:</string>
+    <string name="title_your_profile">Дані Вашого профілю</string>
+    <string name="create_group_for">Для кого створюємо групу?</string>
+    <string name="search_group_for">Для кого шукаємо групу?</string>
+    <string name="title_group_search">Пошук групи</string>
+    <string name="title_create_group">Створення групи</string>
+    <string name="boy">Хлопчик</string>
+    <string name="girl">Дівчинка</string>
+    <string name="sure_you_want_kick">Ви впевнені, що хочете видалити \"%s\" з групи?</string>
+    <string name="action_yes_kick">Так, видалити</string>
+    <string name="crop_photo">Обрізати фото</string>
+    <string name="rotate_photo">Поворот зображення</string>
+    <string name="rotate_photo_right">Поворот за годинниковою стрілкою</string>
+    <string name="rotate_photo_left">оворот проти годинникової стрілки</string>
+    <string name="no_data_for_auth">Немає даних для авторизації</string>
+    <string name="auth_impossible">Авторизація неможлива</string>
+    <string name="email">Email</string>
+    <string name="enter_your_email">Введіть свій email</string>
+    <string name="incorrect_email">Ви ввели некоректний email</string>
+    <string name="password_rule_hint">Ваш пароль повинен складатись з 6–24 символів і обов’язково містити великі та малі латинські букви, цифри, спеціальні знаки</string>
+    <string name="repeat_password">Повторіть свій пароль</string>
+    <string name="passwords_do_not_match">Паролі не співпадають</string>
+    <string name="action_save_password">Зберегти пароль</string>
+    <string name="create_new_password">Будь ласка, створіть новий пароль нижче</string>
+    <string name="action_sign_up">Зареєструватись</string>
+    <string name="action_send">Відправити</string>
+    <string name="email_restore_instructions">Не турбуйтеся! Будь ласка, введіть свій email за яким ви реєструвались, щоб отримати лист з інструкціями</string>
+    <string name="forgot_password">Забули пароль?</string>
+    <string name="incorrect_password">Ви ввели некоректний пароль</string>
+    <string name="profile_log_in">Увійти у свій профіль</string>
+    <string name="email_sent">Лист був відправлений</string>
+    <string name="check_your_mailbox">Перевірте свою пошту %s, щоб отримати подальші інструкції з відновлення паролю</string>
+    <string name="action_send_again">Відправити ще раз</string>
+    <string name="did_not_get_email">"Не отримали листа? "</string>
+    <string name="password_saved">Пароль збережено</string>
+    <string name="password_saved_info">Ви успішно змінили свій пароль. Будь ласка, використовуйте цей новий пароль при вході в додаток</string>
+    <string name="action_delete_group">Так, видалити групу</string>
+    <string name="delete_group_info">Після видалення групи немає можливості її відновити. Підтвердити видалення групи?</string>
+    <string name="user_review_info">Залишити відгук</string>
+    <string name="user_review_hint">Залишити відгук…</string>
+    <string name="user_review_length">Опис може містити кирилицю або латиницю до 500 символів</string>
+    <string name="action_rate_user">Подати відгук</string>
+    <string name="user_rated_info">Дякуємо за ваш відгук</string>
+    <string name="title_account_info">Мій акаунт та інформація про дітей</string>
+    <string name="title_my_notifications">Мої повідомлення</string>
+    <string name="title_my_settings">Налаштування акаунту</string>
+    <string name="join_request_accepted">Ви погодили запит на приєднання до групи \"%s\"</string>
+    <string name="action_yes_cancel">Так, скасувати</string>
+    <string name="cancel_join_request_info">Ви впевнені, що хочете скасувати запит на приєднання до групи \"%s\"?</string>
+    <string name="join_request_declined_info">Ви впевнені, що хочете відхилити запит на приєднання до групи \"%s\"?</string>
+    <string name="new_join_request_info">Вам надійшов запит на приєднання до групи \"%1$s\" (ID - %2$s).</string>
+    <string name="action_view">Переглянути</string>
+    <string name="tab_my_requests">Мої запити</string>
+    <string name="tab_join_requests">Вхідні запити</string>
+    <string name="action_delete_notifications">Видалити всі сповіщення</string>
+    <string name="find_user">Знайти користувача</string>
+    <string name="user_email">Email користувача</string>
+    <string name="action_find_more_users">Знайти ще користувачів</string>
+    <string name="action_change_email">Змінити email</string>
+    <string name="action_change_password">Змінити пароль</string>
+    <string name="action_go_to_login">На сторінку логіну</string>
+    <string name="receive_emails">Отримувати повідомлення на електронну пошту</string>
+    <string name="service_email_hint">Сервісні повідомлення з питань відновлення пароля чи підтвердження електронної пошти, відправляються автоматично і не можуть бути відхилені Користувачем</string>
+    <string name="title_edit_profile">Редагувати інформацію</string>
+    <string name="edit_credentials">Змінити дані для входу в застосунок</string>
+    <string name="action_log_out">Вийти з акаунту</string>
+    <string name="password_changed">Пароль змінено успішно!</string>
+    <string name="email_changed">Email змінено успішно!</string>
+    <string name="info_screen_hint_3">Насолоджуйся своєю роботою, поки твої діти щасливі та у безпеці!</string>
+    <string name="info_screen_hint_2">Ми допоможемо тобі знайти поруч мам з такими ж проблемами! Організуйте своїх дітей у дитячі групи та по черзі доглядайте за ними у вільний час!</string>
+    <string name="info_screen_hint_1">Тобі треба йти на роботу? Ти шукаєш дитячий садочок для своїх дітей, але більшість недоступні для тебе або занадто дорогі?</string>
+    <string name="title_info_screen">Няня у твоєму телефоні</string>
+    <string name="action_skip">Пропустити</string>
+    <string name="title_set_your_schedule">изначіть свій графік, коли можете доглядати дітей</string>
+    <string name="title_fill_profile">Заповнення профілю</string>
 </resources>
