--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -252,4 +252,5 @@
     <string name="action_skip">Пропустити</string>
     <string name="title_set_your_schedule">изначіть свій графік, коли можете доглядати дітей</string>
     <string name="title_fill_profile">Заповнення профілю</string>
+    <string name="do_not_have_account">"Ще немає профілю? "</string>
 </resources>
